<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">HexagonBlock</string>
    <string name="share_title">I have won <xliff:g>%s</xliff:g> points</string>
    <string name="share_desc1">Calm down, listening to a song for relaxation before playing！</string>
    <string name="wechat_friend">wechat friends</string>
    <string name="wechat_timeline">wechat timeline</string>
    <string name="QQ_friend">QQ friends</string>
    <string name="Qzone">QQ zone</string>
    <string name="share_desc2">I have won <xliff:g>%s</xliff:g> points, with exceeding <xliff:g>%s</xliff:g> points to unveil hidden bonus!</string>
    <string name="diamond_desc">You can change a piece to desirable shape by using a diamond. You can obtain a diamond every <xliff:g>%s</xliff:g> points in total. Now, the number of your diamonds：<xliff:g>%s</xliff:g></string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="use_diamond_hint">There is no suitable apace to place the pieces, do you want to use diamond?</string>
    <string name="exit">Exit</string>
    <string name="continue_game">Continue Game</string>
    <string name="use_diamon">use diamond</string>
    <string name="close">close</string>
    <string name="upload_score">upload your points</string>
    <string name="loading">loading...</string>
    <string name="load_fail">load fail</string>
    <string name="parse_data_error">parse data error</string>
    <string name="not_login">please login </string>
    <string name="retry">please try again</string>
    <string name="download_manager">Download Manager</string>
    <string name="delete">delete</string>
    <string name="new_version">upgrade to new version:</string>
    <string name="data_error">data error</string>
</resources>
